# qwazii_service

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  token
config/: asgi.py  settings.py  urls.py  wsgi.py
config/nginx/: nginx.conf
products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
templates/: base.html
templates/products/: product_confirm_delete.html  product_form.html  product_list.html
templates/registration/: logged_out.html  login.html
